[workspace]
members = [
    "crates/sdf-http",
    "crates/sdf-http-test"
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0" }
http = { version = "1.0.0" }
wit-bindgen = { version = "0.25.0" }
wasmtime = { version = "21.0.0" }
wasmtime-wasi = { version = "21.0.0" }
wasmtime-wasi-http = { version = "21.0.0" }

sdf-http = { path = "crates/sdf-http" }
