[workspace]
members = [
    "crates/sdf-http",
    "crates/http-service"
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0" }
http = { version = "1.0.0" }
poem = { version = "3.1.0", default-features = false }
serde = { version = "1.0.217", default-features = false }
serde_json = "1.0.133"
tokio = { version = "1.43.0", default-features = false }
tracing-subscriber = { version = "0.3.19" }
wit-bindgen = { version = "0.36.0" }

