[package]
name = "sdf-http-test"
version = "0.5.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/sdf-http-guest"
description = "Test Guest Library"

[dependencies]
anyhow = { workspace = true }
http = { version = "1.0.0" }
wit-bindgen = { workspace = true, features = ["macros"]}

sdf-http = { workspace = true }

[dev-dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true  }
wasmtime-wasi-http = { workspace = true  }