[package]
name = "sdf-http-test"
version = "0.4.1"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/sdf-http-guest"
description = "Test Guest Library"

[dependencies]
anyhow = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros"]}

sdf-http = { workspace = true }

[dev-dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true  }
wasmtime-wasi-http = { workspace = true  }