[package]
name = "sdf-http"
version = "0.5.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/sdf-http-guest"
description = "SDF Http API for WASI targets"

[dependencies]
anyhow = { workspace = true }
http = { version = "1.0.0" }

wit-bindgen = { workspace = true, features = ['default'] }
