[package]
name = "sdf-http"
version = "0.4.1"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/sdf-http-guest"
description = "SDF HTTP WASM client library"
license = "Apache-2.0"
categories = ["wasm"]
keywords = ["streaming", "stream", "sdf"]

[dependencies]
anyhow = { workspace = true }
http = { workspace = true }

wit-bindgen = { workspace = true, features = ['default'] }
