[package]
name = "ssdk-http"
version = "0.1.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/ssdk"
description = "SSDK Http API for WASI targets"

[dependencies]
anyhow = { workspace = true }
http = { version = "1.0.0" }

wit-bindgen = { workspace = true, features = ['default'] }
